--- a/omegasoft_hr_payroll_receipt_payment/i18n/es_VE.po
+++ b/omegasoft_hr_payroll_receipt_payment/i18n/es_VE.po
@@ -4,26 +4,28 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 15.0+e\n"
+"Project-Id-Version: Odoo Server 16.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-31 17:40+0000\n"
-"PO-Revision-Date: 2022-10-31 17:40+0000\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2024-10-30 15:50-0400\n"
+"Last-Translator: Leonardo J. Caballero G. <leonardocaballero@gmail.com>\n"
 "Language-Team: \n"
+"Language: es_VE\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: \n"
-"Plural-Forms: \n"
+"Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Poedit 3.5\n"
 
 #. module: omegasoft_hr_payroll_receipt_payment
 #: model_terms:ir.ui.view,arch_db:omegasoft_hr_payroll_receipt_payment.hr_payslip_report_custom
 msgid "<b>Aprobado por</b>"
-msgstr ""
+msgstr "<b>Aprobado por</b>"
 
 #. module: omegasoft_hr_payroll_receipt_payment
 #: model_terms:ir.ui.view,arch_db:omegasoft_hr_payroll_receipt_payment.hr_payslip_report_custom
 msgid "<b>Recibido por</b>"
-msgstr ""
+msgstr "<b>Recibido por</b>"
 
 #. module: omegasoft_hr_payroll_receipt_payment
 #: model_terms:ir.ui.view,arch_db:omegasoft_hr_payroll_receipt_payment.hr_payslip_report_custom
@@ -33,6 +35,10 @@ msgid ""
 "                                        :\n"
 "                                </span>"
 msgstr ""
+"<span>\n"
+"                                    <strong>Neto a pagar</strong>\n"
+"                                        :\n"
+"                                </span>"
 
 #. module: omegasoft_hr_payroll_receipt_payment
 #: model_terms:ir.ui.view,arch_db:omegasoft_hr_payroll_receipt_payment.hr_payslip_report_custom
@@ -42,111 +48,115 @@ msgid ""
 "                                        :\n"
 "                                </span>"
 msgstr ""
+"<span>\n"
+"                                    <strong>Totales</strong>\n"
+"                                        :\n"
+"                                </span>"
 
 #. module: omegasoft_hr_payroll_receipt_payment
 #: model_terms:ir.ui.view,arch_db:omegasoft_hr_payroll_receipt_payment.hr_payslip_report_custom
 msgid "<strong>Abono trimestral de Prestaciones Sociales:</strong>"
-msgstr ""
+msgstr "<strong>Abono trimestral de Prestaciones Sociales:</strong>"
 
 #. module: omegasoft_hr_payroll_receipt_payment
 #: model_terms:ir.ui.view,arch_db:omegasoft_hr_payroll_receipt_payment.hr_payslip_report_custom
 msgid "<strong>Acumulados</strong>"
-msgstr ""
+msgstr "<strong>Acumulados</strong>"
 
 #. module: omegasoft_hr_payroll_receipt_payment
 #: model_terms:ir.ui.view,arch_db:omegasoft_hr_payroll_receipt_payment.hr_payslip_report_custom
 msgid "<strong>Anticipo de Utilades Otorgados:</strong>"
-msgstr ""
+msgstr "<strong>Anticipo de Utilidades Otorgados:</strong>"
 
 #. module: omegasoft_hr_payroll_receipt_payment
 #: model_terms:ir.ui.view,arch_db:omegasoft_hr_payroll_receipt_payment.hr_payslip_report_custom
 msgid "<strong>Calculado en </strong>"
-msgstr ""
+msgstr "<strong>Calculado en </strong>"
 
 #. module: omegasoft_hr_payroll_receipt_payment
 #: model_terms:ir.ui.view,arch_db:omegasoft_hr_payroll_receipt_payment.hr_payslip_report_custom
 msgid "<strong>Cargo</strong>"
-msgstr ""
+msgstr "<strong>Cargo</strong>"
 
 #. module: omegasoft_hr_payroll_receipt_payment
 #: model_terms:ir.ui.view,arch_db:omegasoft_hr_payroll_receipt_payment.hr_payslip_report_custom
 msgid "<strong>Empleado</strong>"
-msgstr ""
+msgstr "<strong>Empleado</strong>"
 
 #. module: omegasoft_hr_payroll_receipt_payment
 #: model_terms:ir.ui.view,arch_db:omegasoft_hr_payroll_receipt_payment.hr_payslip_report_custom
 msgid "<strong>Fecha de inicio del contrato</strong>"
-msgstr ""
+msgstr "<strong>Fecha de inicio del contrato</strong>"
 
 #. module: omegasoft_hr_payroll_receipt_payment
 #: model_terms:ir.ui.view,arch_db:omegasoft_hr_payroll_receipt_payment.hr_payslip_report_custom
 msgid "<strong>Identificación</strong>"
-msgstr ""
+msgstr "<strong>Identificación</strong>"
 
 #. module: omegasoft_hr_payroll_receipt_payment
 #: model_terms:ir.ui.view,arch_db:omegasoft_hr_payroll_receipt_payment.hr_payslip_report_custom
 msgid "<strong>Período de pago</strong>"
-msgstr ""
+msgstr "<strong>Período de pago</strong>"
 
 #. module: omegasoft_hr_payroll_receipt_payment
 #: model_terms:ir.ui.view,arch_db:omegasoft_hr_payroll_receipt_payment.hr_payslip_report_custom
 msgid "<strong>Prestaciones Sociales:</strong>"
-msgstr ""
+msgstr "<strong>Prestaciones Sociales:</strong>"
 
 #. module: omegasoft_hr_payroll_receipt_payment
 #: model_terms:ir.ui.view,arch_db:omegasoft_hr_payroll_receipt_payment.hr_payslip_report_custom
 msgid "<strong>Salario básico</strong>"
-msgstr ""
+msgstr "<strong>Salario básico</strong>"
 
 #. module: omegasoft_hr_payroll_receipt_payment
 #: model_terms:ir.ui.view,arch_db:omegasoft_hr_payroll_receipt_payment.hr_payslip_report_custom
 msgid "<strong>Salario promedio vacaciones</strong>"
-msgstr ""
+msgstr "<strong>Salario promedio vacaciones</strong>"
 
 #. module: omegasoft_hr_payroll_receipt_payment
 #: model_terms:ir.ui.view,arch_db:omegasoft_hr_payroll_receipt_payment.hr_payslip_report_custom
 msgid "<strong>Utilades generadas:</strong>"
-msgstr ""
+msgstr "<strong>Utilades generadas:</strong>"
 
 #. module: omegasoft_hr_payroll_receipt_payment
 #: model_terms:ir.ui.view,arch_db:omegasoft_hr_payroll_receipt_payment.hr_payslip_report_custom
 msgid "<strong>Utilidades Netas:</strong>"
-msgstr ""
+msgstr "<strong>Utilidades Netas:</strong>"
 
 #. module: omegasoft_hr_payroll_receipt_payment
 #: model:ir.model.fields,field_description:omegasoft_hr_payroll_receipt_payment.field_hr_receipt_payment_names__active
 msgid "Active"
-msgstr ""
+msgstr "Activo"
 
 #. module: omegasoft_hr_payroll_receipt_payment
 #: model_terms:ir.ui.view,arch_db:omegasoft_hr_payroll_receipt_payment.hr_report_name_search
 msgid "Archived"
-msgstr ""
+msgstr "Archivado"
 
 #. module: omegasoft_hr_payroll_receipt_payment
 #: model_terms:ir.ui.view,arch_db:omegasoft_hr_payroll_receipt_payment.hr_payslip_report_custom
 msgid "Asignaciones"
-msgstr ""
+msgstr "Asignaciones"
 
 #. module: omegasoft_hr_payroll_receipt_payment
 #: model:ir.model.fields,field_description:omegasoft_hr_payroll_receipt_payment.field_hr_receipt_payment_names__create_uid
 msgid "Created by"
-msgstr ""
+msgstr "Creado por"
 
 #. module: omegasoft_hr_payroll_receipt_payment
 #: model:ir.model.fields,field_description:omegasoft_hr_payroll_receipt_payment.field_hr_receipt_payment_names__create_date
 msgid "Created on"
-msgstr ""
+msgstr "Creado el"
 
 #. module: omegasoft_hr_payroll_receipt_payment
 #: model_terms:ir.ui.view,arch_db:omegasoft_hr_payroll_receipt_payment.hr_payslip_report_custom
 msgid "Deducciones"
-msgstr ""
+msgstr "Deducciones"
 
 #. module: omegasoft_hr_payroll_receipt_payment
 #: model:ir.model.fields,field_description:omegasoft_hr_payroll_receipt_payment.field_hr_receipt_payment_names__display_name
 msgid "Display Name"
-msgstr ""
+msgstr "Nombre a mostrar"
 
 #. module: omegasoft_hr_payroll_receipt_payment
 #: model_terms:ir.ui.view,arch_db:omegasoft_hr_payroll_receipt_payment.hr_payslip_report_custom
@@ -154,56 +164,58 @@ msgid ""
 "El importe neto se recuperará de la primera remuneración positiva "
 "establecida después."
 msgstr ""
+"El importe neto se recuperará de la primera remuneración positiva "
+"establecida después."
 
 #. module: omegasoft_hr_payroll_receipt_payment
 #: model:ir.model.fields,field_description:omegasoft_hr_payroll_receipt_payment.field_hr_receipt_payment_names__id
 msgid "ID"
-msgstr ""
+msgstr "ID"
 
 #. module: omegasoft_hr_payroll_receipt_payment
 #: model_terms:ir.ui.view,arch_db:omegasoft_hr_payroll_receipt_payment.hr_payslip_other_input_custom
 msgid "Input Data"
-msgstr ""
+msgstr "Datos de entrada"
 
 #. module: omegasoft_hr_payroll_receipt_payment
 #: model:ir.model.fields,field_description:omegasoft_hr_payroll_receipt_payment.field_uom_category__is_payroll_category
 msgid "Is payroll category"
-msgstr "Es una categoría para nómina?"
+msgstr "¿Es una categoría para nómina?"
 
 #. module: omegasoft_hr_payroll_receipt_payment
 #: model:ir.model.fields,field_description:omegasoft_hr_payroll_receipt_payment.field_hr_receipt_payment_names____last_update
 msgid "Last Modified on"
-msgstr ""
+msgstr "Última modificación el"
 
 #. module: omegasoft_hr_payroll_receipt_payment
 #: model:ir.model.fields,field_description:omegasoft_hr_payroll_receipt_payment.field_hr_receipt_payment_names__write_uid
 msgid "Last Updated by"
-msgstr ""
+msgstr "Última actualización por"
 
 #. module: omegasoft_hr_payroll_receipt_payment
 #: model:ir.model.fields,field_description:omegasoft_hr_payroll_receipt_payment.field_hr_receipt_payment_names__write_date
 msgid "Last Updated on"
-msgstr ""
+msgstr "Última actualización el"
 
 #. module: omegasoft_hr_payroll_receipt_payment
 #: model_terms:ir.ui.view,arch_db:omegasoft_hr_payroll_receipt_payment.omegasoft_payroll_custom_layout
 msgid "Logo"
-msgstr ""
+msgstr "Logotipo"
 
 #. module: omegasoft_hr_payroll_receipt_payment
 #: model_terms:ir.ui.view,arch_db:omegasoft_hr_payroll_receipt_payment.hr_payslip_report_custom
 msgid "Nombre"
-msgstr ""
+msgstr "Nombre"
 
 #. module: omegasoft_hr_payroll_receipt_payment
 #: model_terms:ir.ui.view,arch_db:omegasoft_hr_payroll_receipt_payment.hr_payslip_report_custom
 msgid "Número de días"
-msgstr ""
+msgstr "Número de días"
 
 #. module: omegasoft_hr_payroll_receipt_payment
 #: model_terms:ir.ui.view,arch_db:omegasoft_hr_payroll_receipt_payment.hr_payslip_report_custom
 msgid "Número de horas"
-msgstr ""
+msgstr "Número de horas"
 
 #. module: omegasoft_hr_payroll_receipt_payment
 #: model:ir.model,name:omegasoft_hr_payroll_receipt_payment.model_hr_payslip
@@ -223,7 +235,7 @@ msgstr "Categoria de productos UdM"
 #. module: omegasoft_hr_payroll_receipt_payment
 #: model_terms:ir.ui.view,arch_db:omegasoft_hr_payroll_receipt_payment.omegasoft_payroll_custom_layout
 msgid "Página: <span class=\"page\"/> / <span class=\"topage\"/>"
-msgstr ""
+msgstr "Página: <span class=\"page\"/> / <span class=\"topage\"/>"
 
 #. module: omegasoft_hr_payroll_receipt_payment
 #: model:ir.model.fields,field_description:omegasoft_hr_payroll_receipt_payment.field_hr_receipt_payment_names__name
@@ -266,7 +278,7 @@ msgstr "'Nómina - %s' % (object.name)"
 #. module: omegasoft_hr_payroll_receipt_payment
 #: model_terms:ir.ui.view,arch_db:omegasoft_hr_payroll_receipt_payment.hr_payslip_report_custom
 msgid "<strong>Salario liquidación</strong>"
-msgstr ""
+msgstr "<strong>Salario liquidación</strong>"
 
 #. module: omegasoft_hr_payroll_receipt_payment
 #: model:ir.model,name:omegasoft_hr_payroll_receipt_payment.model_res_company
