--- a/l10n_ve_config_account/i18n/es_VE.po
+++ b/l10n_ve_config_account/i18n/es_VE.po
@@ -4,16 +4,18 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 16.0+e\n"
+"Project-Id-Version: Odoo Server 16.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-08-30 14:34+0000\n"
-"PO-Revision-Date: 2023-08-30 14:34+0000\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2024-10-28 22:39-0400\n"
+"Last-Translator: Leonardo J. Caballero G. <leonardocaballero@gmail.com>\n"
 "Language-Team: \n"
+"Language: es_VE\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: \n"
-"Plural-Forms: \n"
+"Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Poedit 3.5\n"
 
 #. module: account
 #: model:mail.template,body_html:account.email_template_edi_credit_note
@@ -22,7 +24,8 @@ msgid ""
 "    <p style=\"margin: 0px; padding: 0px; font-size: 13px;\">\n"
 "        Dear\n"
 "        <t t-if=\"object.partner_id.parent_id\">\n"
-"            <t t-out=\"object.partner_id.name or ''\">Brandon Freeman</t> (<t t-out=\"object.partner_id.parent_id.name or ''\">Azure Interior</t>),\n"
+"            <t t-out=\"object.partner_id.name or ''\">Brandon Freeman</t> (<t t-out=\"object.partner_id.parent_id.name or ''\">Azure "
+"Interior</t>),\n"
 "        </t>\n"
 "        <t t-else=\"\">\n"
 "            <t t-out=\"object.partner_id.name or ''\">Brandon Freeman</t>,\n"
@@ -38,7 +41,8 @@ msgid ""
 "        <t t-if=\"object.invoice_origin\">\n"
 "            (with reference: <t t-out=\"object.invoice_origin or ''\">SUB003</t>)\n"
 "        </t>\n"
-"        amounting in <span style=\"font-weight:bold;\" t-out=\"format_amount(object.amount_total, object.currency_id) or ''\">$ 143,750.00</span>\n"
+"        amounting in <span style=\"font-weight:bold;\" t-out=\"format_amount(object.amount_total, object.currency_id) or ''\">$ "
+"143,750.00</span>\n"
 "        from <t t-out=\"object.company_id.name or ''\">YourCompany</t>.\n"
 "        <br><br>\n"
 "        Do not hesitate to contact us if you have any questions.\n"
@@ -54,7 +58,8 @@ msgstr ""
 "    <p style=\"margin: 0px; padding: 0px; font-size: 13px;\">\n"
 "        Estimado/a\n"
 "        <t t-if=\"object.partner_id.parent_id\">\n"
-"            <t t-out=\"object.partner_id.name or ''\">Brandon Freeman</t> (<t t-out=\"object.partner_id.parent_id.name or ''\">Azure Interior</t>),\n"
+"            <t t-out=\"object.partner_id.name or ''\">Brandon Freeman</t> (<t t-out=\"object.partner_id.parent_id.name or ''\">Azure "
+"Interior</t>),\n"
 "        </t>\n"
 "        <t t-else=\"\">\n"
 "            <t t-out=\"object.partner_id.name or ''\">Brandon Freeman</t>,\n"
@@ -70,7 +75,8 @@ msgstr ""
 "        <t t-if=\"object.invoice_origin\">\n"
 "            (con la referencia: <t t-out=\"object.invoice_origin or ''\">SUB003</t>)\n"
 "        </t>\n"
-"        por un importe total de <span style=\"font-weight:bold;\" t-out=\"format_amount(object.amount_total, object.currency_id) or ''\">$ 143,750.00</span>\n"
+"        por un importe total de <span style=\"font-weight:bold;\" t-out=\"format_amount(object.amount_total, object.currency_id) or "
+"''\">$ 143,750.00</span>\n"
 "        de parte de <t t-out=\"object.company_id.name or ''\">SuCompañía</t>.\n"
 "        <br/><br/>\n"
 "        No dude en contactarnos si tiene alguna pregunta.\n"
@@ -100,23 +106,16 @@ msgstr "Añadir nota de crédito"
 #: model:ir.model.fields,help:account.field_account_bank_statement_line__partner_bank_id
 #: model:ir.model.fields,help:account.field_account_move__partner_bank_id
 msgid ""
-"Bank Account Number to which the invoice will be paid. A Company bank "
-"account if this is a Customer Invoice or Vendor Credit Note, otherwise a "
-"Partner bank account number."
+"Bank Account Number to which the invoice will be paid. A Company bank account if this is a Customer Invoice or Vendor Credit Note, "
+"otherwise a Partner bank account number."
 msgstr ""
-"Número de cuenta bancaria a la que se pagará la factura. Una cuenta bancaria"
-" de la Empresa si ésta es una factura de cliente o una nota de crédito"
-" de proveedor, de lo contrario se usará el número de cuenta bancaria del "
-"partner."
+"Número de cuenta bancaria a la que se pagará la factura. Una cuenta bancaria de la Empresa si ésta es una factura de cliente o una nota "
+"de crédito de proveedor, de lo contrario se usará el número de cuenta bancaria del Socio."
 
 #. module: account
 #: model:ir.model.fields,help:account.field_account_journal__refund_sequence
-msgid ""
-"Check this box if you don't want to share the same sequence for invoices and"
-" credit notes made from this journal"
-msgstr ""
-"Marca esta casilla si no desea compartir la misma secuencia de facturas y "
-"notas de crédito para este diario"
+msgid "Check this box if you don't want to share the same sequence for invoices and credit notes made from this journal"
+msgstr "Marca esta casilla si no desea compartir la misma secuencia de facturas y notas de crédito para este diario"
 
 #. module: account
 #: model_terms:ir.actions.act_window,help:account.action_move_out_refund_type
@@ -131,8 +130,6 @@ msgstr "Crear una nota de crédito de proveedor"
 #. module: account
 #. odoo-python
 #: code:addons/account/models/account_move.py:0
-#: code:addons/account/models/account_move.py:0
-#: code:addons/odoo/addons/account/models/account_move.py:0
 #: code:addons/odoo/addons/account/models/account_move.py:0
 #: model:ir.model.fields.selection,name:account.selection__account_payment__reconciled_invoices_type__credit_note
 #: model_terms:ir.ui.view,arch_db:account.account_journal_dashboard_kanban_view
@@ -191,7 +188,6 @@ msgstr "Distribución de notas de crédito"
 msgid "Draft Credit Note"
 msgstr "Borrador de nota de crédito"
 
-
 #. module: account
 #. odoo-python
 #: code:addons/account/models/account_move.py:0
@@ -205,59 +201,42 @@ msgstr "Borrador de nota de crédito de proveedor"
 #: code:addons/account/models/account_move.py:0
 #: code:addons/odoo/addons/account/models/account_move.py:0
 #, python-format
-msgid ""
-"Duplicated vendor reference detected. You probably encoded twice the same "
-"vendor bill/credit note."
+msgid "Duplicated vendor reference detected. You probably encoded twice the same vendor bill/credit note."
 msgstr ""
-"Se detectó una referencia duplicada del proveedor. Es probable que haya "
-"codificado dos veces la misma factura / nota de crédito del proveedor."
+"Se detectó una referencia duplicada del proveedor. Es probable que haya codificado dos veces la misma factura / nota de crédito del "
+"proveedor."
 
 #. module: account
 #. odoo-python
 #: code:addons/account/models/account_tax.py:0
 #: code:addons/odoo/addons/account/models/account_tax.py:0
 #, python-format
-msgid ""
-"Invoice and credit note distribution should each contain exactly one line "
-"for the base."
-msgstr ""
-"La distribución de facturas y notas de crédito debe contener cada una"
-" exactamente una línea para la base."
+msgid "Invoice and credit note distribution should each contain exactly one line for the base."
+msgstr "La distribución de facturas y notas de crédito debe contener cada una exactamente una línea para la base."
 
 #. module: account
 #. odoo-python
 #: code:addons/account/models/account_tax.py:0
 #: code:addons/odoo/addons/account/models/account_tax.py:0
 #, python-format
-msgid ""
-"Invoice and credit note distribution should have the same number of lines."
-msgstr ""
-"La distribución de facturas y notas de crédito debe tener el mismo "
-"número de líneas."
+msgid "Invoice and credit note distribution should have the same number of lines."
+msgstr "La distribución de facturas y notas de crédito debe tener el mismo número de líneas."
 
 #. module: account
 #. odoo-python
 #: code:addons/account/models/account_tax.py:0
 #: code:addons/odoo/addons/account/models/account_tax.py:0
 #, python-format
-msgid ""
-"Invoice and credit note distribution should match (same percentages, in the "
-"same order)."
-msgstr ""
-"La distribución de facturas y notas de crédito debe coincidir (los "
-"mismos porcentajes, en el mismo orden)."
+msgid "Invoice and credit note distribution should match (same percentages, in the same order)."
+msgstr "La distribución de facturas y notas de crédito debe coincidir (los mismos porcentajes, en el mismo orden)."
 
 #. module: account
 #. odoo-python
 #: code:addons/account/models/account_tax.py:0
 #: code:addons/odoo/addons/account/models/account_tax.py:0
 #, python-format
-msgid ""
-"Invoice and credit note repartition should have at least one tax repartition"
-" line."
-msgstr ""
-"La repartición de facturas y notas de crédito debe tener por lo menos una "
-"línea de repartición de impuestos."
+msgid "Invoice and credit note repartition should have at least one tax repartition line."
+msgstr "La repartición de facturas y notas de crédito debe tener por lo menos una línea de repartición de impuestos."
 
 #. module: account
 #: model_terms:ir.actions.act_window,help:account.action_move_out_refund_type
@@ -287,9 +266,7 @@ msgstr "Cambiar a reembolso/nota de crédito"
 #. module: account
 #: model_terms:ir.ui.view,arch_db:account.view_account_move_reversal
 msgid "The credit note is auto-validated and reconciled with the invoice."
-msgstr ""
-"La nota de crédito se valida automáticamente y se concilia con la "
-"factura."
+msgstr "La nota de crédito se valida automáticamente y se concilia con la factura."
 
 #. module: account
 #: model_terms:ir.ui.view,arch_db:account.view_account_move_reversal
@@ -302,23 +279,17 @@ msgstr ""
 
 #. module: account
 #: model_terms:ir.ui.view,arch_db:account.view_account_move_reversal
-msgid ""
-"The credit note is created in draft and can be edited before being issued."
-msgstr ""
-"La nota de crédito se crea en borrador y puede ser editada antes de "
-"expedirse."
+msgid "The credit note is created in draft and can be edited before being issued."
+msgstr "La nota de crédito se crea en borrador y puede ser editada antes de expedirse."
 
 #. module: account
 #: model:ir.model.fields,help:account.field_account_tax_repartition_line__sequence
 msgid ""
-"The order in which distribution lines are displayed and matched. For refunds"
-" to work properly, invoice distribution lines should be arranged in the same"
-" order as the credit note distribution lines they correspond to."
+"The order in which distribution lines are displayed and matched. For refunds to work properly, invoice distribution lines should be "
+"arranged in the same order as the credit note distribution lines they correspond to."
 msgstr ""
-"El orden en que se muestran y coinciden las líneas de distribución. Para que"
-" las notas de crédito funcionen correctamente, las líneas de reparto "
-"de facturas deben organizarse en el mismo orden que las líneas de reparto de"
-" las notas de crédito a las que corresponden."
+"El orden en que se muestran y coinciden las líneas de distribución. Para que las notas de crédito funcionen correctamente, las líneas de "
+"reparto de facturas deben organizarse en el mismo orden que las líneas de reparto de las notas de crédito a las que corresponden."
 
 #. module: account
 #: model:ir.model.fields.selection,name:account.selection__account_invoice_report__move_type__in_refund
@@ -333,34 +304,23 @@ msgstr "Nota de crédito de proveedor"
 #: code:addons/odoo/addons/account/models/account_move.py:0
 #, python-format
 msgid ""
-"You cannot validate an invoice with a negative total amount. You should "
-"create a credit note instead. Use the action menu to transform it into a "
-"credit note or refund."
+"You cannot validate an invoice with a negative total amount. You should create a credit note instead. Use the action menu to transform it "
+"into a credit note or refund."
 msgstr ""
-"No puede validar una factura con un importe total negativo. En su lugar, "
-"debe crear una nota de crédito. Use el menú de acciones para "
+"No puede validar una factura con un importe total negativo. En su lugar, debe crear una nota de crédito. Use el menú de acciones para "
 "transformarlo en una nota de crédito/reembolso."
 
 #. module: account
 #: model_terms:ir.ui.view,arch_db:account.view_move_form
-msgid ""
-"for this customer. You can allocate them to mark this credit note as paid."
-msgstr ""
-"para este cliente. Puede asignarlos para marcar esta nota de crédito como "
-"pagada."
+msgid "for this customer. You can allocate them to mark this credit note as paid."
+msgstr "para este cliente. Puede asignarlos para marcar esta nota de crédito como pagada."
 
 #. module: account
 #: model_terms:ir.ui.view,arch_db:account.view_move_form
-msgid ""
-"for this vendor. You can allocate them to mark this credit note as paid."
-msgstr ""
-"para este proveedor. Puede asignarlos para marcar esta nota de crédito como "
-"pagada."
+msgid "for this vendor. You can allocate them to mark this credit note as paid."
+msgstr "para este proveedor. Puede asignarlos para marcar esta nota de crédito como pagada."
 
 #. module: account
 #: model:mail.template,subject:account.email_template_edi_credit_note
-msgid ""
-"{{ object.company_id.name }} Credit Note (Ref {{ object.name or 'n/a' }})"
-msgstr ""
-"{{ object.company_id.name }} Nota de crédito (Ref {{ object.name or 'n/a' "
-"}})"
+msgid "{{ object.company_id.name }} Credit Note (Ref {{ object.name or 'n/a' }})"
+msgstr "{{ object.company_id.name }} Nota de crédito (Ref {{ object.name or 'n/a' }})"
