--- a/omegasoft_contract_benefit_controls_fields/i18n/es_VE.po
+++ b/omegasoft_contract_benefit_controls_fields/i18n/es_VE.po
@@ -4,21 +4,23 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 16.0+e\n"
+"Project-Id-Version: Odoo Server 16.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-08-18 15:50+0000\n"
-"PO-Revision-Date: 2023-08-18 15:50+0000\n"
-"Last-Translator: \n"
+"POT-Creation-Date: 2024-10-30 15:19+0000\n"
+"PO-Revision-Date: 2024-10-30 09:39-0400\n"
+"Last-Translator: Leonardo J. Caballero G. <leonardocaballero@gmail.com>\n"
 "Language-Team: \n"
+"Language: es_VE\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: \n"
-"Plural-Forms: \n"
+"Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Poedit 3.5\n"
 
 #. module: omegasoft_contract_benefit_controls_fields
 #: model:ir.model.fields,field_description:omegasoft_contract_benefit_controls_fields.field_hr_contract__accumulated_day_per_year_benefits_currency
 msgid "Accumulated Day Per Year Benefits Currency"
-msgstr ""
+msgstr "Moneda de las prestaciones día acumulado por año"
 
 #. module: omegasoft_contract_benefit_controls_fields
 #: model:ir.model.fields,field_description:omegasoft_contract_benefit_controls_fields.field_hr_contract__accumulated_earnings_benefits_currency
@@ -77,21 +79,15 @@ msgstr "Contrato del empleado"
 
 #. module: omegasoft_contract_benefit_controls_fields
 #: model:ir.model.fields,help:omegasoft_contract_benefit_controls_fields.field_hr_contract__interest_accrued_employee_benefits
-msgid ""
-"Indicates the amount of the initial balance for accrued interest benefits."
-msgstr ""
-"Indica el monto del saldo inicial para el acumulado de Intereses "
-"prestaciones."
+msgid "Indicates the amount of the initial balance for accrued interest benefits."
+msgstr "Indica el monto del saldo inicial para el acumulado de Intereses prestaciones."
 
 #. module: omegasoft_contract_benefit_controls_fields
 #: model:ir.model.fields,help:omegasoft_contract_benefit_controls_fields.field_hr_contract__accumulated_day_per_year_benefits
 #: model:ir.model.fields,help:omegasoft_contract_benefit_controls_fields.field_hr_contract__accumulated_earnings_benefits
 #: model:ir.model.fields,help:omegasoft_contract_benefit_controls_fields.field_hr_contract__accumulated_social_benefits
-msgid ""
-"Indicates the amount of the opening balance for the Benefit Accrual to Date."
-msgstr ""
-"Indica el monto del saldo inicial para el acumulado de Prestaciones a la "
-"Fecha."
+msgid "Indicates the amount of the opening balance for the Benefit Accrual to Date."
+msgstr "Indica el monto del saldo inicial para el acumulado de Prestaciones a la Fecha."
 
 #. module: omegasoft_contract_benefit_controls_fields
 #: model:ir.model.fields,help:omegasoft_contract_benefit_controls_fields.field_hr_contract__accumulated_advances_earnings_benefits
@@ -106,12 +102,12 @@ msgstr "Indica el monto del saldo de apertura para los Anticipos de Prestaciones
 #. module: omegasoft_contract_benefit_controls_fields
 #: model:ir.model.fields,help:omegasoft_contract_benefit_controls_fields.field_hr_contract__last_social_benefits_calculation
 msgid "Indicates the date of the last Social Benefit payment calculation."
-msgstr "Indica la fecha del último cálculo del abono de prestación Social"
+msgstr "Indica la fecha del último cálculo del abono de prestación Social."
 
 #. module: omegasoft_contract_benefit_controls_fields
 #: model:ir.model.fields,help:omegasoft_contract_benefit_controls_fields.field_hr_contract__last_calculation_days_per_year
 msgid "Indicates the date of the last payment of days per year."
-msgstr "Indica la Fecha del último abono de días por año"
+msgstr "Indica la Fecha del último abono de días por año."
 
 #. module: omegasoft_contract_benefit_controls_fields
 #: model:ir.model.fields,field_description:omegasoft_contract_benefit_controls_fields.field_hr_contract__interest_accrued_employee_benefits_currency
@@ -126,24 +122,24 @@ msgstr "Intereses Prestacional acumulado"
 #. module: omegasoft_contract_benefit_controls_fields
 #: model:ir.model.fields,field_description:omegasoft_contract_benefit_controls_fields.field_hr_contract__is_accumulated_day_per_year_benefits
 msgid "Is accumulated day per year benefits"
-msgstr ""
+msgstr "¿Se acumulan los beneficios del día por año?"
 
 #. module: omegasoft_contract_benefit_controls_fields
 #: model:ir.model.fields,field_description:omegasoft_contract_benefit_controls_fields.field_hr_contract__is_accumulated_advances_earnings_benefits
 #: model:ir.model.fields,field_description:omegasoft_contract_benefit_controls_fields.field_hr_contract__is_accumulated_earnings_benefits
 #: model:ir.model.fields,field_description:omegasoft_contract_benefit_controls_fields.field_hr_contract__is_accumulated_social_benefits
 msgid "Is accumulated social benefits"
-msgstr ""
+msgstr "¿Son beneficios sociales acumulados?"
 
 #. module: omegasoft_contract_benefit_controls_fields
 #: model:ir.model.fields,field_description:omegasoft_contract_benefit_controls_fields.field_hr_contract__is_accumulated_advances_social_benefits
 msgid "Is advances social benefits"
-msgstr ""
+msgstr "¿Promueve beneficios sociales?"
 
 #. module: omegasoft_contract_benefit_controls_fields
 #: model:ir.model.fields,field_description:omegasoft_contract_benefit_controls_fields.field_hr_contract__is_interest_accrued_employee_benefits
 msgid "Is interest accrued employee benefits"
-msgstr ""
+msgstr "¿Son los intereses devengados por los beneficios de los empleados?"
 
 #. module: omegasoft_contract_benefit_controls_fields
 #: model:ir.model.fields,field_description:omegasoft_contract_benefit_controls_fields.field_hr_contract__last_social_benefits_calculation
