--- a/omegasoft_contract_parafiscal_contributions_fields/i18n/es_VE.po
+++ b/omegasoft_contract_parafiscal_contributions_fields/i18n/es_VE.po
@@ -4,21 +4,23 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 15.0+e\n"
+"Project-Id-Version: Odoo Server 16.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-09-26 19:14+0000\n"
-"PO-Revision-Date: 2022-09-26 19:14+0000\n"
-"Last-Translator: \n"
+"POT-Creation-Date: 2024-10-30 15:31+0000\n"
+"PO-Revision-Date: 2024-10-30 11:33-0400\n"
+"Last-Translator: Leonardo J. Caballero G. <leonardocaballero@gmail.com>\n"
 "Language-Team: \n"
+"Language: es_VE\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: \n"
-"Plural-Forms: \n"
+"Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Poedit 3.5\n"
 
 #. module: omegasoft_contract_parafiscal_contributions_fields
 #: model_terms:ir.ui.view,arch_db:omegasoft_contract_parafiscal_contributions_fields.hr_contract_parafiscal_contributions_field
 msgid "<span attrs=\"{'invisible': [('income_tax_islr', '=', False)]}\">%</span>"
-msgstr ""
+msgstr "<span attrs=\"{'invisible': [('income_tax_islr', '=', False)]}\">%</span>"
 
 #. module: omegasoft_contract_parafiscal_contributions_fields
 #: model:ir.model,name:omegasoft_contract_parafiscal_contributions_fields.model_hr_contract
@@ -36,6 +38,11 @@ msgid "Housing Policy Law"
 msgstr "Ley de Política Habitacional"
 
 #. module: omegasoft_contract_parafiscal_contributions_fields
+#: model:ir.model.fields,field_description:omegasoft_contract_parafiscal_contributions_fields.field_hr_contract__inces
+msgid "Inces"
+msgstr "INCES"
+
+#. module: omegasoft_contract_parafiscal_contributions_fields
 #: model:ir.model.fields,field_description:omegasoft_contract_parafiscal_contributions_fields.field_hr_contract__income_tax_islr
 msgid "Income Tax ISRL"
 msgstr "Impuesto Sobre la renta"
@@ -46,11 +53,14 @@ msgid "Indicates that the employee makes the Housing Policy Law contribution."
 msgstr "Indica que el empleado realiza el aporte Ley De Política Habitacional."
 
 #. module: omegasoft_contract_parafiscal_contributions_fields
+#: model:ir.model.fields,help:omegasoft_contract_parafiscal_contributions_fields.field_hr_contract__inces
+msgid "Indicates that the employee makes the INCES."
+msgstr "Indica que el empleado realiza el INCES."
+
+#. module: omegasoft_contract_parafiscal_contributions_fields
 #: model:ir.model.fields,help:omegasoft_contract_parafiscal_contributions_fields.field_hr_contract__forced_unemployment
-msgid ""
-"Indicates that the employee makes the forced unemployment contribution."
-msgstr ""
-"Indica que el empleado realiza el aporte Paro Forzoso"
+msgid "Indicates that the employee makes the forced unemployment contribution."
+msgstr "Indica que el empleado realiza el aporte Paro Forzoso."
 
 #. module: omegasoft_contract_parafiscal_contributions_fields
 #: model:ir.model.fields,help:omegasoft_contract_parafiscal_contributions_fields.field_hr_contract__income_tax_islr
@@ -64,10 +74,8 @@ msgstr "Indica que el empleado realiza el aporte del seguro social."
 
 #. module: omegasoft_contract_parafiscal_contributions_fields
 #: model:ir.model.fields,help:omegasoft_contract_parafiscal_contributions_fields.field_hr_contract__percentage_income_tax_islr
-msgid ""
-"Indicates the percentage figure to be applied for Income Tax Withholding."
-msgstr ""
-"Indica la cifra porcentual a aplicar por Retención de Impuesto sobre la Renta."
+msgid "Indicates the percentage figure to be applied for Income Tax Withholding."
+msgstr "Indica la cifra porcentual a aplicar por Retención de Impuesto sobre la Renta."
 
 #. module: omegasoft_contract_parafiscal_contributions_fields
 #: model:ir.model.fields,field_description:omegasoft_contract_parafiscal_contributions_fields.field_hr_contract__mandatory_social_security
