--- a/omegasoft_contract_salary_fields/i18n/es_VE.po
+++ b/omegasoft_contract_salary_fields/i18n/es_VE.po
@@ -4,26 +4,28 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 16.0+e\n"
+"Project-Id-Version: Odoo Server 16.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-04-11 14:59+0000\n"
-"PO-Revision-Date: 2023-04-11 14:59+0000\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2024-10-30 09:41-0400\n"
+"Last-Translator: Leonardo J. Caballero G. <leonardocaballero@gmail.com>\n"
 "Language-Team: \n"
+"Language: es_VE\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: \n"
-"Plural-Forms: \n"
+"Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Poedit 3.5\n"
 
 #. module: omegasoft_contract_salary_fields
 #: model_terms:ir.ui.view,arch_db:omegasoft_contract_salary_fields.hr_contract_salary_field
 msgid "/ month"
-msgstr ""
+msgstr "/ mes"
 
 #. module: omegasoft_contract_salary_fields
 #: model_terms:ir.ui.view,arch_db:omegasoft_contract_salary_fields.hr_contract_salary_field
 msgid "<span>P/hr.</span>"
-msgstr ""
+msgstr "<span>P/hr.</span>"
 
 #. module: omegasoft_contract_salary_fields
 #: model:ir.model.fields,field_description:omegasoft_contract_salary_fields.field_hr_contract__average_wage_currency
@@ -88,7 +90,7 @@ msgstr "Fecha de finalización para el calculo del salario promedio"
 #. module: omegasoft_contract_salary_fields
 #: model:ir.model.fields,help:omegasoft_contract_salary_fields.field_hr_contract__cestaticket_salary
 msgid "Monthly food benefit"
-msgstr "Beneficio de alimentación Mensual."
+msgstr "Beneficio mensual de alimentos"
 
 #. module: omegasoft_contract_salary_fields
 #: model:ir.model.fields,field_description:omegasoft_contract_salary_fields.field_hr_contract__salary_overtime_hours
@@ -120,7 +122,7 @@ msgstr "Fecha de inicio para el calculo del salario promedio"
 msgid "The average amount of money received by a worker in a given period"
 msgstr ""
 "Es la cantidad de dinero promedio que recibe un trabajador en un periodo "
-"determinado."
+"determinado"
 
 #. module: omegasoft_contract_salary_fields
 #. odoo-python
@@ -136,11 +138,11 @@ msgid ""
 "the maximum duration of the ordinary working day."
 msgstr ""
 "Son las horas de trabajo que se realizan con carácter voluntario, sobre la "
-"duración máxima de la jornada ordinaria"
+"duración máxima de la jornada ordinaria."
 
 #. module: omegasoft_contract_salary_fields
 #. odoo-python
 #: code:addons/omegasoft_contract_salary_fields/models/contract_salary_fields.py:0
 #, python-format
 msgid "exceeds the number of weeks established"
-msgstr "Excede el número de semanas establecido"
+msgstr "excede el número de semanas establecido"
