--- a/omegasoft_contract_utility_liabilities_fields/i18n/es_VE.po
+++ b/omegasoft_contract_utility_liabilities_fields/i18n/es_VE.po
@@ -4,16 +4,18 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 15.0+e\n"
+"Project-Id-Version: Odoo Server 16.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-12-02 12:58+0000\n"
-"PO-Revision-Date: 2022-12-02 12:58+0000\n"
-"Last-Translator: \n"
+"POT-Creation-Date: 2024-10-30 15:35+0000\n"
+"PO-Revision-Date: 2024-10-30 09:53-0400\n"
+"Last-Translator: Leonardo J. Caballero G. <leonardocaballero@gmail.com>\n"
 "Language-Team: \n"
+"Language: es_VE\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: \n"
-"Plural-Forms: \n"
+"Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Poedit 3.5\n"
 
 #. module: omegasoft_contract_utility_liabilities_fields
 #: model:ir.model.fields,field_description:omegasoft_contract_utility_liabilities_fields.field_hr_contract__advances_granted_currency
@@ -33,7 +35,7 @@ msgstr "Anticipos Otorgados (monto previo)"
 #. module: omegasoft_contract_utility_liabilities_fields
 #: model:ir.model.fields,field_description:omegasoft_contract_utility_liabilities_fields.field_hr_contract__earnings_generated_currency
 msgid "Earnings Generated Currency"
-msgstr ""
+msgstr "Moneda generada por las ganancias"
 
 #. module: omegasoft_contract_utility_liabilities_fields
 #: model:ir.model.fields,field_description:omegasoft_contract_utility_liabilities_fields.field_hr_contract__earnings_generated_total_available_currency
