--- a/omegasoft_employee_eventual_bonuses/i18n/es_VE.po
+++ b/omegasoft_employee_eventual_bonuses/i18n/es_VE.po
@@ -4,31 +4,33 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 16.0+e\n"
+"Project-Id-Version: Odoo Server 16.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-10-11 14:46+0000\n"
-"PO-Revision-Date: 2023-10-11 14:46+0000\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2024-10-30 10:00-0400\n"
+"Last-Translator: Leonardo J. Caballero G. <leonardocaballero@gmail.com>\n"
 "Language-Team: \n"
+"Language: es_VE\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: \n"
-"Plural-Forms: \n"
+"Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Poedit 3.5\n"
 
 #. module: omegasoft_employee_eventual_bonuses
 #: model_terms:ir.ui.view,arch_db:omegasoft_employee_eventual_bonuses.hr_employee_bonus_form
 msgid "<span> - </span>"
-msgstr ""
+msgstr "<span> - </span>"
 
 #. module: omegasoft_employee_eventual_bonuses
 #: model:ir.model.fields,field_description:omegasoft_employee_eventual_bonuses.field_hr_employee_bonus__access_warning
 msgid "Access warning"
-msgstr ""
+msgstr "Aviso de acceso"
 
 #. module: omegasoft_employee_eventual_bonuses
 #: model:ir.model.fields,field_description:omegasoft_employee_eventual_bonuses.field_hr_employee_bonus__message_needaction
 msgid "Action Needed"
-msgstr ""
+msgstr "Acción necesaria"
 
 #. module: omegasoft_employee_eventual_bonuses
 #: model:ir.model.fields,field_description:omegasoft_employee_eventual_bonuses.field_hr_employee_bonus__active
@@ -39,22 +41,22 @@ msgstr "Activo"
 #. module: omegasoft_employee_eventual_bonuses
 #: model:ir.model.fields,field_description:omegasoft_employee_eventual_bonuses.field_hr_employee_bonus__activity_ids
 msgid "Activities"
-msgstr ""
+msgstr "Actividades"
 
 #. module: omegasoft_employee_eventual_bonuses
 #: model:ir.model.fields,field_description:omegasoft_employee_eventual_bonuses.field_hr_employee_bonus__activity_exception_decoration
 msgid "Activity Exception Decoration"
-msgstr ""
+msgstr "Decoración de excepción de actividad"
 
 #. module: omegasoft_employee_eventual_bonuses
 #: model:ir.model.fields,field_description:omegasoft_employee_eventual_bonuses.field_hr_employee_bonus__activity_state
 msgid "Activity State"
-msgstr ""
+msgstr "Estado de actividad"
 
 #. module: omegasoft_employee_eventual_bonuses
 #: model:ir.model.fields,field_description:omegasoft_employee_eventual_bonuses.field_hr_employee_bonus__activity_type_icon
 msgid "Activity Type Icon"
-msgstr ""
+msgstr "Icono de tipo de actividad"
 
 #. module: omegasoft_employee_eventual_bonuses
 #: model:ir.model.fields,field_description:omegasoft_employee_eventual_bonuses.field_hr_employee_bonus__amount
@@ -75,7 +77,7 @@ msgstr "Asignado"
 #. module: omegasoft_employee_eventual_bonuses
 #: model:ir.model.fields,field_description:omegasoft_employee_eventual_bonuses.field_hr_employee_bonus__message_attachment_count
 msgid "Attachment Count"
-msgstr ""
+msgstr "Conteo de anexos"
 
 #. module: omegasoft_employee_eventual_bonuses
 #: model:ir.model.fields.selection,name:omegasoft_employee_eventual_bonuses.selection__hr_employee_bonus__name__birth_bonus
@@ -123,13 +125,13 @@ msgstr "Confirmar"
 #: model:ir.model.fields,field_description:omegasoft_employee_eventual_bonuses.field_hr_employee_bonus__create_uid
 #: model:ir.model.fields,field_description:omegasoft_employee_eventual_bonuses.field_hr_employee_bonus_line__create_uid
 msgid "Created by"
-msgstr ""
+msgstr "Creado por"
 
 #. module: omegasoft_employee_eventual_bonuses
 #: model:ir.model.fields,field_description:omegasoft_employee_eventual_bonuses.field_hr_employee_bonus__create_date
 #: model:ir.model.fields,field_description:omegasoft_employee_eventual_bonuses.field_hr_employee_bonus_line__create_date
 msgid "Created on"
-msgstr ""
+msgstr "Creado el"
 
 #. module: omegasoft_employee_eventual_bonuses
 #: model:ir.model.fields,field_description:omegasoft_employee_eventual_bonuses.field_hr_employee_bonus__currency_id
@@ -145,7 +147,7 @@ msgstr "Bonificación actual"
 #. module: omegasoft_employee_eventual_bonuses
 #: model:ir.model.fields,help:omegasoft_employee_eventual_bonuses.field_hr_employee_bonus__access_url
 msgid "Customer Portal URL"
-msgstr ""
+msgstr "URL del portal del cliente"
 
 #. module: omegasoft_employee_eventual_bonuses
 #: model:ir.model.fields,field_description:omegasoft_employee_eventual_bonuses.field_hr_employee_bonus__date
@@ -168,7 +170,7 @@ msgstr "Descripción"
 #: model:ir.model.fields,field_description:omegasoft_employee_eventual_bonuses.field_hr_employee_bonus__display_name
 #: model:ir.model.fields,field_description:omegasoft_employee_eventual_bonuses.field_hr_employee_bonus_line__display_name
 msgid "Display Name"
-msgstr ""
+msgstr "Nombre a mostrar"
 
 #. module: omegasoft_employee_eventual_bonuses
 #: model:ir.model.fields.selection,name:omegasoft_employee_eventual_bonuses.selection__hr_employee_bonus__state__draft
@@ -222,22 +224,22 @@ msgstr "Bonos Eventuales"
 #. module: omegasoft_employee_eventual_bonuses
 #: model:ir.model.fields,field_description:omegasoft_employee_eventual_bonuses.field_hr_employee_bonus__message_follower_ids
 msgid "Followers"
-msgstr ""
+msgstr "Seguidores"
 
 #. module: omegasoft_employee_eventual_bonuses
 #: model:ir.model.fields,field_description:omegasoft_employee_eventual_bonuses.field_hr_employee_bonus__message_partner_ids
 msgid "Followers (Partners)"
-msgstr ""
+msgstr "Seguidores (Socios)"
 
 #. module: omegasoft_employee_eventual_bonuses
 #: model:ir.model.fields,help:omegasoft_employee_eventual_bonuses.field_hr_employee_bonus__activity_type_icon
 msgid "Font awesome icon e.g. fa-tasks"
-msgstr ""
+msgstr "Icono Font awesome, por ejemplo fa-tasks"
 
 #. module: omegasoft_employee_eventual_bonuses
 #: model:ir.model.fields,field_description:omegasoft_employee_eventual_bonuses.field_hr_employee_bonus__has_message
 msgid "Has Message"
-msgstr ""
+msgstr "Tiene Mensaje"
 
 #. module: omegasoft_employee_eventual_bonuses
 #: model:ir.model.fields.selection,name:omegasoft_employee_eventual_bonuses.selection__hr_employee_bonus__study_level__high_school
@@ -248,61 +250,61 @@ msgstr "Escuela Secundaria"
 #: model:ir.model.fields,field_description:omegasoft_employee_eventual_bonuses.field_hr_employee_bonus__id
 #: model:ir.model.fields,field_description:omegasoft_employee_eventual_bonuses.field_hr_employee_bonus_line__id
 msgid "ID"
-msgstr ""
+msgstr "ID"
 
 #. module: omegasoft_employee_eventual_bonuses
 #: model:ir.model.fields,field_description:omegasoft_employee_eventual_bonuses.field_hr_employee_bonus__activity_exception_icon
 msgid "Icon"
-msgstr ""
+msgstr "Icono"
 
 #. module: omegasoft_employee_eventual_bonuses
 #: model:ir.model.fields,help:omegasoft_employee_eventual_bonuses.field_hr_employee_bonus__activity_exception_icon
 msgid "Icon to indicate an exception activity."
-msgstr ""
+msgstr "Icono para indicar una actividad de excepción."
 
 #. module: omegasoft_employee_eventual_bonuses
 #: model:ir.model.fields,help:omegasoft_employee_eventual_bonuses.field_hr_employee_bonus__message_needaction
 msgid "If checked, new messages require your attention."
-msgstr ""
+msgstr "Si está marcada, nuevos mensajes requieren su atención."
 
 #. module: omegasoft_employee_eventual_bonuses
 #: model:ir.model.fields,help:omegasoft_employee_eventual_bonuses.field_hr_employee_bonus__message_has_error
 #: model:ir.model.fields,help:omegasoft_employee_eventual_bonuses.field_hr_employee_bonus__message_has_sms_error
 msgid "If checked, some messages have a delivery error."
-msgstr ""
+msgstr "Si está marcada, algunos mensajes tienen un error de entrega."
 
 #. module: omegasoft_employee_eventual_bonuses
 #: model:ir.model.fields,field_description:omegasoft_employee_eventual_bonuses.field_hr_employee_bonus__message_is_follower
 msgid "Is Follower"
-msgstr ""
+msgstr "Es seguidor"
 
 #. module: omegasoft_employee_eventual_bonuses
 #: model:ir.model.fields,field_description:omegasoft_employee_eventual_bonuses.field_hr_employee_bonus____last_update
 #: model:ir.model.fields,field_description:omegasoft_employee_eventual_bonuses.field_hr_employee_bonus_line____last_update
 msgid "Last Modified on"
-msgstr ""
+msgstr "Última modificación el"
 
 #. module: omegasoft_employee_eventual_bonuses
 #: model:ir.model.fields,field_description:omegasoft_employee_eventual_bonuses.field_hr_employee_bonus__write_uid
 #: model:ir.model.fields,field_description:omegasoft_employee_eventual_bonuses.field_hr_employee_bonus_line__write_uid
 msgid "Last Updated by"
-msgstr ""
+msgstr "Última actualización por"
 
 #. module: omegasoft_employee_eventual_bonuses
 #: model:ir.model.fields,field_description:omegasoft_employee_eventual_bonuses.field_hr_employee_bonus__write_date
 #: model:ir.model.fields,field_description:omegasoft_employee_eventual_bonuses.field_hr_employee_bonus_line__write_date
 msgid "Last Updated on"
-msgstr ""
+msgstr "Última actualización el"
 
 #. module: omegasoft_employee_eventual_bonuses
 #: model:ir.model.fields,field_description:omegasoft_employee_eventual_bonuses.field_hr_employee_bonus__message_main_attachment_id
 msgid "Main Attachment"
-msgstr ""
+msgstr "Adjunto principal"
 
 #. module: omegasoft_employee_eventual_bonuses
 #: model:ir.model.fields.selection,name:omegasoft_employee_eventual_bonuses.selection__hr_employee_bonus__study_level__maternal
 msgid "Maternal"
-msgstr ""
+msgstr "Materno"
 
 #. module: omegasoft_employee_eventual_bonuses
 #: model:ir.model.fields,field_description:omegasoft_employee_eventual_bonuses.field_hr_employee_bonus__maximum_age
@@ -312,12 +314,12 @@ msgstr "Edad máxima"
 #. module: omegasoft_employee_eventual_bonuses
 #: model:ir.model.fields,field_description:omegasoft_employee_eventual_bonuses.field_hr_employee_bonus__message_has_error
 msgid "Message Delivery error"
-msgstr ""
+msgstr "Error de entrega del mensaje"
 
 #. module: omegasoft_employee_eventual_bonuses
 #: model:ir.model.fields,field_description:omegasoft_employee_eventual_bonuses.field_hr_employee_bonus__message_ids
 msgid "Messages"
-msgstr ""
+msgstr "Mensajes"
 
 #. module: omegasoft_employee_eventual_bonuses
 #: model:ir.model.fields,field_description:omegasoft_employee_eventual_bonuses.field_hr_employee_bonus__minimum_age
@@ -327,7 +329,7 @@ msgstr "Edad mínima"
 #. module: omegasoft_employee_eventual_bonuses
 #: model:ir.model.fields,field_description:omegasoft_employee_eventual_bonuses.field_hr_employee_bonus__currency_ref_id
 msgid "Moneda operativa"
-msgstr ""
+msgstr "Moneda operativa"
 
 #. module: omegasoft_employee_eventual_bonuses
 #: model:ir.model.fields.selection,name:omegasoft_employee_eventual_bonuses.selection__hr_employee_bonus__type_maximum_age__months
@@ -338,7 +340,7 @@ msgstr "Meses"
 #. module: omegasoft_employee_eventual_bonuses
 #: model:ir.model.fields,field_description:omegasoft_employee_eventual_bonuses.field_hr_employee_bonus__my_activity_date_deadline
 msgid "My Activity Deadline"
-msgstr ""
+msgstr "Mi plazo de actividad"
 
 #. module: omegasoft_employee_eventual_bonuses
 #: model:ir.model.fields.selection,name:omegasoft_employee_eventual_bonuses.selection__hr_employee_bonus__state__new
@@ -348,47 +350,47 @@ msgstr "Nuevo"
 #. module: omegasoft_employee_eventual_bonuses
 #: model:ir.model.fields,field_description:omegasoft_employee_eventual_bonuses.field_hr_employee_bonus__activity_calendar_event_id
 msgid "Next Activity Calendar Event"
-msgstr ""
+msgstr "Próximo evento del calendario de actividades"
 
 #. module: omegasoft_employee_eventual_bonuses
 #: model:ir.model.fields,field_description:omegasoft_employee_eventual_bonuses.field_hr_employee_bonus__activity_date_deadline
 msgid "Next Activity Deadline"
-msgstr ""
+msgstr "Fecha límite para la próxima actividad"
 
 #. module: omegasoft_employee_eventual_bonuses
 #: model:ir.model.fields,field_description:omegasoft_employee_eventual_bonuses.field_hr_employee_bonus__activity_summary
 msgid "Next Activity Summary"
-msgstr ""
+msgstr "Resumen de la próxima actividad"
 
 #. module: omegasoft_employee_eventual_bonuses
 #: model:ir.model.fields,field_description:omegasoft_employee_eventual_bonuses.field_hr_employee_bonus__activity_type_id
 msgid "Next Activity Type"
-msgstr ""
+msgstr "Tipo de la próxima actividad"
 
 #. module: omegasoft_employee_eventual_bonuses
 #: model:ir.model.fields,field_description:omegasoft_employee_eventual_bonuses.field_hr_employee_bonus__message_needaction_counter
 msgid "Number of Actions"
-msgstr ""
+msgstr "Número de acciones"
 
 #. module: omegasoft_employee_eventual_bonuses
 #: model:ir.model.fields,field_description:omegasoft_employee_eventual_bonuses.field_hr_employee_bonus__message_has_error_counter
 msgid "Number of errors"
-msgstr ""
+msgstr "Número de errores"
 
 #. module: omegasoft_employee_eventual_bonuses
 #: model:ir.model.fields,help:omegasoft_employee_eventual_bonuses.field_hr_employee_bonus__message_needaction_counter
 msgid "Number of messages requiring action"
-msgstr ""
+msgstr "Número de mensajes que requieren una acción"
 
 #. module: omegasoft_employee_eventual_bonuses
 #: model:ir.model.fields,help:omegasoft_employee_eventual_bonuses.field_hr_employee_bonus__message_has_error_counter
 msgid "Number of messages with delivery error"
-msgstr ""
+msgstr "Número de mensajes con error de entrega"
 
 #. module: omegasoft_employee_eventual_bonuses
 #: model:ir.model.fields,field_description:omegasoft_employee_eventual_bonuses.field_hr_employee_bonus__access_url
 msgid "Portal Access URL"
-msgstr ""
+msgstr "URL de acceso al portal"
 
 #. module: omegasoft_employee_eventual_bonuses
 #: model:ir.model.fields,field_description:omegasoft_employee_eventual_bonuses.field_hr_employee_bonus__rate_id
@@ -403,12 +405,12 @@ msgstr "Rechazado"
 #. module: omegasoft_employee_eventual_bonuses
 #: model:ir.model.fields,field_description:omegasoft_employee_eventual_bonuses.field_hr_employee_bonus__activity_user_id
 msgid "Responsible User"
-msgstr ""
+msgstr "Usuario responsable"
 
 #. module: omegasoft_employee_eventual_bonuses
 #: model:ir.model.fields,field_description:omegasoft_employee_eventual_bonuses.field_hr_employee_bonus__message_has_sms_error
 msgid "SMS Delivery error"
-msgstr ""
+msgstr "Error de entrega de SMS"
 
 #. module: omegasoft_employee_eventual_bonuses
 #: model:ir.model.fields.selection,name:omegasoft_employee_eventual_bonuses.selection__hr_employee_bonus__name__school_voucher
@@ -423,13 +425,13 @@ msgstr "Buscar empleados"
 #. module: omegasoft_employee_eventual_bonuses
 #: model:ir.model.fields,field_description:omegasoft_employee_eventual_bonuses.field_hr_employee_bonus__access_token
 msgid "Security Token"
-msgstr ""
+msgstr "Token de seguridad"
 
 #. module: omegasoft_employee_eventual_bonuses
 #: model:ir.model.fields,help:omegasoft_employee_eventual_bonuses.field_hr_employee_bonus__active
 #: model:ir.model.fields,help:omegasoft_employee_eventual_bonuses.field_hr_employee_bonus_line__active
 msgid "Set active to false to hide the children tag without removing it."
-msgstr ""
+msgstr "Establezca active en false para ocultar la etiqueta secundaria sin eliminarla."
 
 #. module: omegasoft_employee_eventual_bonuses
 #: model:ir.model.fields,field_description:omegasoft_employee_eventual_bonuses.field_hr_employee_bonus__state
@@ -444,6 +446,10 @@ msgid ""
 "Today: Activity date is today\n"
 "Planned: Future activities."
 msgstr ""
+"Estado basado en actividades\n"
+"Vencida: La fecha de vencimiento ya ha pasado\n"
+"Hoy: La fecha de la actividad es hoy\n"
+"Planificada: Actividades futuras."
 
 #. module: omegasoft_employee_eventual_bonuses
 #: model:ir.model.fields,field_description:omegasoft_employee_eventual_bonuses.field_hr_employee_bonus__study_level
@@ -482,7 +488,7 @@ msgstr "Tipo de edad mínima"
 #. module: omegasoft_employee_eventual_bonuses
 #: model:ir.model.fields,help:omegasoft_employee_eventual_bonuses.field_hr_employee_bonus__activity_exception_decoration
 msgid "Type of the exception activity on record."
-msgstr ""
+msgstr "Tipo de la actividad de excepción registrada."
 
 #. module: omegasoft_employee_eventual_bonuses
 #: model:ir.model.fields.selection,name:omegasoft_employee_eventual_bonuses.selection__hr_employee_bonus__study_level__university
@@ -492,12 +498,12 @@ msgstr "Universidad"
 #. module: omegasoft_employee_eventual_bonuses
 #: model:ir.model.fields,field_description:omegasoft_employee_eventual_bonuses.field_hr_employee_bonus__website_message_ids
 msgid "Website Messages"
-msgstr ""
+msgstr "Mensajes del sitio web"
 
 #. module: omegasoft_employee_eventual_bonuses
 #: model:ir.model.fields,help:omegasoft_employee_eventual_bonuses.field_hr_employee_bonus__website_message_ids
 msgid "Website communication history"
-msgstr ""
+msgstr "Historia de la comunicación en la web"
 
 #. module: omegasoft_employee_eventual_bonuses
 #: model:ir.model.fields.selection,name:omegasoft_employee_eventual_bonuses.selection__hr_employee_bonus__type_maximum_age__years
