--- a/omegasoft_export_payroll_payments/i18n/es_VE.po
+++ b/omegasoft_export_payroll_payments/i18n/es_VE.po
@@ -4,16 +4,18 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 15.0+e\n"
+"Project-Id-Version: Odoo Server 16.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-11-18 20:37+0000\n"
-"PO-Revision-Date: 2022-11-18 20:37+0000\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2024-10-30 10:02-0400\n"
+"Last-Translator: Leonardo J. Caballero G. <leonardocaballero@gmail.com>\n"
 "Language-Team: \n"
+"Language: es_VE\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: \n"
-"Plural-Forms: \n"
+"Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Poedit 3.5\n"
 
 #. module: omegasoft_export_payroll_payments
 #: model_terms:ir.actions.act_window,help:omegasoft_export_payroll_payments.export_bank_payments_action
@@ -23,7 +25,7 @@ msgstr ""
 #. module: omegasoft_export_payroll_payments
 #: model:ir.model.fields,field_description:omegasoft_export_payroll_payments.field_export_bank_payments__txt_file
 msgid "Archivo TXT"
-msgstr ""
+msgstr "Archivo TXT"
 
 #. module: omegasoft_export_payroll_payments
 #: model:ir.model.fields,field_description:omegasoft_export_payroll_payments.field_export_bank_payments__bank_id
@@ -63,12 +65,12 @@ msgstr ""
 #. module: omegasoft_export_payroll_payments
 #: model:ir.model.fields,field_description:omegasoft_export_payroll_payments.field_export_bank_payments__create_uid
 msgid "Created by"
-msgstr ""
+msgstr "Creado por"
 
 #. module: omegasoft_export_payroll_payments
 #: model:ir.model.fields,field_description:omegasoft_export_payroll_payments.field_export_bank_payments__create_date
 msgid "Created on"
-msgstr ""
+msgstr "Creado en"
 
 #. module: omegasoft_export_payroll_payments
 #: model:ir.model.fields,help:omegasoft_export_payroll_payments.field_export_bank_payments__bank_account_id
@@ -83,7 +85,7 @@ msgstr ""
 #. module: omegasoft_export_payroll_payments
 #: model:ir.model.fields,field_description:omegasoft_export_payroll_payments.field_export_bank_payments__display_name
 msgid "Display Name"
-msgstr ""
+msgstr "Nombre a Mostrar"
 
 #. module: omegasoft_export_payroll_payments
 #: model:ir.model.fields,field_description:omegasoft_export_payroll_payments.field_export_bank_payments__employee_domain
@@ -139,12 +141,12 @@ msgstr ""
 #. module: omegasoft_export_payroll_payments
 #: model:ir.model.fields,field_description:omegasoft_export_payroll_payments.field_export_bank_payments__txt_name
 msgid "Filename txt"
-msgstr ""
+msgstr "Nombre de archivo txt"
 
 #. module: omegasoft_export_payroll_payments
 #: model_terms:ir.ui.view,arch_db:omegasoft_export_payroll_payments.export_bank_payments_view_search
 msgid "Filter Generar TXT de Banco"
-msgstr ""
+msgstr "Filtrar Generar TXT de Banco"
 
 #. module: omegasoft_export_payroll_payments
 #: model:ir.actions.act_window,name:omegasoft_export_payroll_payments.export_bank_payments_action
@@ -156,7 +158,7 @@ msgstr ""
 #. module: omegasoft_export_payroll_payments
 #: model:ir.model.fields,field_description:omegasoft_export_payroll_payments.field_export_bank_payments__id
 msgid "ID"
-msgstr ""
+msgstr "ID"
 
 #. module: omegasoft_export_payroll_payments
 #: model:ir.model.fields,help:omegasoft_export_payroll_payments.field_export_bank_payments__type_trans
@@ -187,17 +189,17 @@ msgstr "Indica si el tipo de estructura es para una nómina de obrero."
 #. module: omegasoft_export_payroll_payments
 #: model:ir.model.fields,field_description:omegasoft_export_payroll_payments.field_export_bank_payments____last_update
 msgid "Last Modified on"
-msgstr ""
+msgstr "Última modificación en"
 
 #. module: omegasoft_export_payroll_payments
 #: model:ir.model.fields,field_description:omegasoft_export_payroll_payments.field_export_bank_payments__write_uid
 msgid "Last Updated by"
-msgstr ""
+msgstr "Última actualización por"
 
 #. module: omegasoft_export_payroll_payments
 #: model:ir.model.fields,field_description:omegasoft_export_payroll_payments.field_export_bank_payments__write_date
 msgid "Last Updated on"
-msgstr ""
+msgstr "Última actualización en"
 
 #. module: omegasoft_export_payroll_payments
 #: model:ir.model.fields.selection,name:omegasoft_export_payroll_payments.selection__export_bank_payments__operation_type__same
