--- a/omegasoft_export_payroll_payments_banavih/i18n/es_VE.po
+++ b/omegasoft_export_payroll_payments_banavih/i18n/es_VE.po
@@ -4,21 +4,23 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 15.0+e\n"
+"Project-Id-Version: Odoo Server 16.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-11-18 20:42+0000\n"
-"PO-Revision-Date: 2022-11-18 20:42+0000\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2024-10-30 10:02-0400\n"
+"Last-Translator: Leonardo J. Caballero G. <leonardocaballero@gmail.com>\n"
 "Language-Team: \n"
+"Language: es_VE\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: \n"
-"Plural-Forms: \n"
+"Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Poedit 3.5\n"
 
 #. module: omegasoft_export_payroll_payments_banavih
 #: model:ir.model.fields.selection,name:omegasoft_export_payroll_payments_banavih.selection__export_bank_payments__type_trans__fiscal
 msgid " Banavih"
-msgstr ""
+msgstr " Banavih"
 
 #. module: omegasoft_export_payroll_payments_banavih
 #: model:ir.model,name:omegasoft_export_payroll_payments_banavih.model_export_bank_payments
