--- a/omegasoft_hr_employee/i18n/es_VE.po
+++ b/omegasoft_hr_employee/i18n/es_VE.po
@@ -4,16 +4,18 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 15.0+e\n"
+"Project-Id-Version: Odoo Server 16.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-13 22:57+0000\n"
-"PO-Revision-Date: 2022-10-13 22:57+0000\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2024-10-30 10:03-0400\n"
+"Last-Translator: Leonardo J. Caballero G. <leonardocaballero@gmail.com>\n"
 "Language-Team: \n"
+"Language: es_VE\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: \n"
-"Plural-Forms: \n"
+"Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Poedit 3.5\n"
 
 #. module: omegasoft_hr_employee
 #: model_terms:ir.ui.view,arch_db:omegasoft_hr_employee.hr_view_employee_form_omegasoft_rif
@@ -48,12 +50,12 @@ msgstr "Número de registro del empleado"
 #. module: omegasoft_hr_employee
 #: model_terms:ir.ui.view,arch_db:omegasoft_hr_employee.hr_contract_history_view_form_hourly_wage
 msgid "Contract Name"
-msgstr ""
+msgstr "Nombre del contrato"
 
 #. module: omegasoft_hr_employee
 #: model_terms:ir.ui.view,arch_db:omegasoft_hr_employee.hr_contract_history_view_form_hourly_wage
 msgid "Current Contracts"
-msgstr ""
+msgstr "Contratos vigentes"
 
 #. module: omegasoft_hr_employee
 #: model_terms:ir.ui.view,arch_db:omegasoft_hr_employee.hr_contract_history_view_form_hourly_wage
