--- a/omegasoft_hr_employee_advances_automated_amounts/i18n/es_VE.po
+++ b/omegasoft_hr_employee_advances_automated_amounts/i18n/es_VE.po
@@ -4,16 +4,18 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 16.0+e\n"
+"Project-Id-Version: Odoo Server 16.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-07-14 21:50+0000\n"
-"PO-Revision-Date: 2023-07-14 21:50+0000\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2024-10-30 10:03-0400\n"
+"Last-Translator: Leonardo J. Caballero G. <leonardocaballero@gmail.com>\n"
 "Language-Team: \n"
+"Language: es_VE\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: \n"
-"Plural-Forms: \n"
+"Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Poedit 3.5\n"
 
 #. module: omegasoft_hr_employee_advances_automated_amounts
 #: model:ir.model.fields.selection,name:omegasoft_hr_employee_advances_automated_amounts.selection__hr_employee_advances_loans_discounts__shared_type_advance_loan__benefit_interest
