--- a/omegasoft_hr_employee_bank_information/i18n/es_VE.po
+++ b/omegasoft_hr_employee_bank_information/i18n/es_VE.po
@@ -4,16 +4,18 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 15.0+e\n"
+"Project-Id-Version: Odoo Server 16.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-14 16:07+0000\n"
-"PO-Revision-Date: 2022-10-14 16:07+0000\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2024-10-30 10:06-0400\n"
+"Last-Translator: Leonardo J. Caballero G. <leonardocaballero@gmail.com>\n"
 "Language-Team: \n"
+"Language: es_VE\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: \n"
-"Plural-Forms: \n"
+"Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Poedit 3.5\n"
 
 #. module: omegasoft_hr_employee_bank_information
 #: model:ir.model.fields,field_description:omegasoft_hr_employee_bank_information.field_hr_employee_bank_information__account_holder
@@ -65,12 +67,12 @@ msgstr "C.I. del titular de la cuenta"
 #. module: omegasoft_hr_employee_bank_information
 #: model:ir.model.fields,field_description:omegasoft_hr_employee_bank_information.field_hr_employee_bank_information__create_uid
 msgid "Created by"
-msgstr ""
+msgstr "Creado por"
 
 #. module: omegasoft_hr_employee_bank_information
 #: model:ir.model.fields,field_description:omegasoft_hr_employee_bank_information.field_hr_employee_bank_information__create_date
 msgid "Created on"
-msgstr ""
+msgstr "Creado el"
 
 #. module: omegasoft_hr_employee_bank_information
 #: model:ir.model.fields.selection,name:omegasoft_hr_employee_bank_information.selection__hr_employee_bank_information__account_type__current_account
@@ -80,7 +82,7 @@ msgstr "Cuenta corriente"
 #. module: omegasoft_hr_employee_bank_information
 #: model:ir.model.fields,field_description:omegasoft_hr_employee_bank_information.field_hr_employee_bank_information__display_name
 msgid "Display Name"
-msgstr ""
+msgstr "Nombre a mostrar"
 
 #. module: omegasoft_hr_employee_bank_information
 #: model:ir.model,name:omegasoft_hr_employee_bank_information.model_hr_employee
@@ -105,7 +107,7 @@ msgstr "Información bancaria de los empleados"
 #. module: omegasoft_hr_employee_bank_information
 #: model:ir.model.fields,field_description:omegasoft_hr_employee_bank_information.field_hr_employee_bank_information__id
 msgid "ID"
-msgstr ""
+msgstr "ID"
 
 #. module: omegasoft_hr_employee_bank_information
 #: model:ir.model.fields,help:omegasoft_hr_employee_bank_information.field_hr_employee_bank_information__holder_account_id
@@ -115,17 +117,17 @@ msgstr "C.I del titular de la cuenta"
 #. module: omegasoft_hr_employee_bank_information
 #: model:ir.model.fields,field_description:omegasoft_hr_employee_bank_information.field_hr_employee_bank_information____last_update
 msgid "Last Modified on"
-msgstr ""
+msgstr "Última modificación el"
 
 #. module: omegasoft_hr_employee_bank_information
 #: model:ir.model.fields,field_description:omegasoft_hr_employee_bank_information.field_hr_employee_bank_information__write_uid
 msgid "Last Updated by"
-msgstr ""
+msgstr "Última actualización por"
 
 #. module: omegasoft_hr_employee_bank_information
 #: model:ir.model.fields,field_description:omegasoft_hr_employee_bank_information.field_hr_employee_bank_information__write_date
 msgid "Last Updated on"
-msgstr ""
+msgstr "Última actualización el"
 
 #. module: omegasoft_hr_employee_bank_information
 #: model:ir.model.fields.selection,name:omegasoft_hr_employee_bank_information.selection__hr_employee_bank_information__account_type__savings_account
@@ -143,7 +145,7 @@ msgstr ""
 #. module: omegasoft_hr_employee_bank_information
 #: model:ir.model.fields,field_description:omegasoft_hr_employee_bank_information.field_hr_employee_bank_information__is_payroll_account
 msgid "This is a payroll account"
-msgstr "Es una cuenta de nómina?"
+msgstr "¿Es una cuenta de nómina?"
 
 #. module: omegasoft_hr_employee_bank_information
 #: model:ir.model.fields,field_description:omegasoft_hr_employee_bank_information.field_hr_employee_bank_information__account_type
