--- a/omegasoft_hr_employee_crew/i18n/es_VE.po
+++ b/omegasoft_hr_employee_crew/i18n/es_VE.po
@@ -4,16 +4,18 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 16.0+e\n"
+"Project-Id-Version: Odoo Server 16.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-03-31 13:35+0000\n"
-"PO-Revision-Date: 2023-03-31 13:35+0000\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2024-10-30 10:09-0400\n"
+"Last-Translator: Leonardo J. Caballero G. <leonardocaballero@gmail.com>\n"
 "Language-Team: \n"
+"Language: es_VE\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: \n"
-"Plural-Forms: \n"
+"Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Poedit 3.5\n"
 
 #. module: omegasoft_hr_employee_crew
 #: model:ir.model.fields,field_description:omegasoft_hr_employee_crew.field_hr_employee_crew__active
@@ -34,17 +36,17 @@ msgstr "Compañia"
 #. module: omegasoft_hr_employee_crew
 #: model:ir.model.fields,field_description:omegasoft_hr_employee_crew.field_hr_employee_crew__create_uid
 msgid "Created by"
-msgstr ""
+msgstr "Creado por"
 
 #. module: omegasoft_hr_employee_crew
 #: model:ir.model.fields,field_description:omegasoft_hr_employee_crew.field_hr_employee_crew__create_date
 msgid "Created on"
-msgstr ""
+msgstr "Creado el"
 
 #. module: omegasoft_hr_employee_crew
 #: model:ir.model.fields,field_description:omegasoft_hr_employee_crew.field_hr_employee_crew__display_name
 msgid "Display Name"
-msgstr ""
+msgstr "Nombre a mostrar"
 
 #. module: omegasoft_hr_employee_crew
 #: model_terms:ir.ui.view,arch_db:omegasoft_hr_employee_crew.employee_crew_view_search
@@ -71,22 +73,22 @@ msgstr "Empleados"
 #. module: omegasoft_hr_employee_crew
 #: model:ir.model.fields,field_description:omegasoft_hr_employee_crew.field_hr_employee_crew__id
 msgid "ID"
-msgstr ""
+msgstr "ID"
 
 #. module: omegasoft_hr_employee_crew
 #: model:ir.model.fields,field_description:omegasoft_hr_employee_crew.field_hr_employee_crew____last_update
 msgid "Last Modified on"
-msgstr ""
+msgstr "Última modificación el"
 
 #. module: omegasoft_hr_employee_crew
 #: model:ir.model.fields,field_description:omegasoft_hr_employee_crew.field_hr_employee_crew__write_uid
 msgid "Last Updated by"
-msgstr ""
+msgstr "Última actualización por"
 
 #. module: omegasoft_hr_employee_crew
 #: model:ir.model.fields,field_description:omegasoft_hr_employee_crew.field_hr_employee_crew__write_date
 msgid "Last Updated on"
-msgstr ""
+msgstr "Última actualización el"
 
 #. module: omegasoft_hr_employee_crew
 #: model:ir.model.fields,field_description:omegasoft_hr_employee_crew.field_hr_employee_crew__name
