--- a/omegasoft_hr_employee_family_information/i18n/es_VE.po
+++ b/omegasoft_hr_employee_family_information/i18n/es_VE.po
@@ -4,16 +4,18 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 15.0+e\n"
+"Project-Id-Version: Odoo Server 16.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-14 15:09+0000\n"
-"PO-Revision-Date: 2022-10-14 15:09+0000\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2024-10-30 3-0400\n"
+"Last-Translator: Leonardo J. Caballero G. <leonardocaballero@gmail.com>\n"
 "Language-Team: \n"
+"Language: es_VE\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: \n"
-"Plural-Forms: \n"
+"Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Poedit 3.5\n"
 
 #. module: omegasoft_hr_employee_family_information
 #: model:ir.model.fields,field_description:omegasoft_hr_employee_family_information.field_hr_employee_family_information__active
@@ -33,12 +35,12 @@ msgstr "Archivados"
 #. module: omegasoft_hr_employee_family_information
 #: model:ir.model.fields,field_description:omegasoft_hr_employee_family_information.field_hr_employee_family_information__create_uid
 msgid "Created by"
-msgstr ""
+msgstr "Creado por"
 
 #. module: omegasoft_hr_employee_family_information
 #: model:ir.model.fields,field_description:omegasoft_hr_employee_family_information.field_hr_employee_family_information__create_date
 msgid "Created on"
-msgstr ""
+msgstr "Creado el"
 
 #. module: omegasoft_hr_employee_family_information
 #: model:ir.model.fields,field_description:omegasoft_hr_employee_family_information.field_hr_employee_family_information__date_of_birth
@@ -58,7 +60,7 @@ msgstr "Días"
 #. module: omegasoft_hr_employee_family_information
 #: model:ir.model.fields,field_description:omegasoft_hr_employee_family_information.field_hr_employee_family_information__display_name
 msgid "Display Name"
-msgstr ""
+msgstr "Nombre a mostrar"
 
 #. module: omegasoft_hr_employee_family_information
 #: model:ir.model.fields.selection,name:omegasoft_hr_employee_family_information.selection__hr_employee_family_information__study_level__elementary_school
@@ -119,7 +121,7 @@ msgstr "Escuela secundaria"
 #. module: omegasoft_hr_employee_family_information
 #: model:ir.model.fields,field_description:omegasoft_hr_employee_family_information.field_hr_employee_family_information__id
 msgid "ID"
-msgstr ""
+msgstr "ID"
 
 #. module: omegasoft_hr_employee_family_information
 #: model:ir.model.fields,field_description:omegasoft_hr_employee_family_information.field_hr_employee_family_information__id_number
@@ -129,17 +131,17 @@ msgstr "N° cedula"
 #. module: omegasoft_hr_employee_family_information
 #: model:ir.model.fields,field_description:omegasoft_hr_employee_family_information.field_hr_employee_family_information____last_update
 msgid "Last Modified on"
-msgstr ""
+msgstr "Última modificación el"
 
 #. module: omegasoft_hr_employee_family_information
 #: model:ir.model.fields,field_description:omegasoft_hr_employee_family_information.field_hr_employee_family_information__write_uid
 msgid "Last Updated by"
-msgstr ""
+msgstr "Última actualización por"
 
 #. module: omegasoft_hr_employee_family_information
 #: model:ir.model.fields,field_description:omegasoft_hr_employee_family_information.field_hr_employee_family_information__write_date
 msgid "Last Updated on"
-msgstr ""
+msgstr "Última actualización el"
 
 #. module: omegasoft_hr_employee_family_information
 #: model:ir.model.fields.selection,name:omegasoft_hr_employee_family_information.selection__hr_employee_family_information__gender__male
@@ -224,4 +226,3 @@ msgstr "indica si tiene la tutela del niño"
 #: model:ir.model.fields.selection,name:omegasoft_hr_employee_family_information.selection__hr_employee_family_information__relationship__spouse
 msgid "Spouse"
 msgstr "Cónyuge"
-
