--- a/omegasoft_hr_estimated_profits/i18n/es_VE.po
+++ b/omegasoft_hr_estimated_profits/i18n/es_VE.po
@@ -4,16 +4,18 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 16.0+e\n"
+"Project-Id-Version: Odoo Server 16.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-07-03 21:33+0000\n"
-"PO-Revision-Date: 2023-07-03 21:33+0000\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2024-10-30 15:35-0400\n"
+"Last-Translator: Leonardo J. Caballero G. <leonardocaballero@gmail.com>\n"
 "Language-Team: \n"
+"Language: es_VE\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: \n"
-"Plural-Forms: \n"
+"Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Poedit 3.5\n"
 
 #. module: omegasoft_hr_estimated_profits
 #: model_terms:ir.ui.view,arch_db:omegasoft_hr_estimated_profits.l10n_ve_omegasoft_res_config_settings_estimated_profit
@@ -22,6 +24,9 @@ msgid ""
 "                                Lines for calculating the estimayed profits\n"
 "                        </span>"
 msgstr ""
+"<span class=\"o_form_label\">\n"
+"                                Líneas para el cálculo de los beneficios estimados\n"
+"                        </span>"
 
 #. module: omegasoft_hr_estimated_profits
 #: model_terms:ir.ui.view,arch_db:omegasoft_hr_estimated_profits.l10n_ve_omegasoft_res_config_settings_estimated_profit
@@ -76,22 +81,22 @@ msgstr "Creado en"
 #. module: omegasoft_hr_estimated_profits
 #: model_terms:ir.ui.view,arch_db:omegasoft_hr_estimated_profits.hr_contract_view_form_estimated_profit
 msgid "Date End"
-msgstr "fecha de finalización"
+msgstr "Fecha de Finalización"
 
 #. module: omegasoft_hr_estimated_profits
 #: model_terms:ir.ui.view,arch_db:omegasoft_hr_estimated_profits.hr_contract_view_form_estimated_profit
 msgid "Date Start"
-msgstr "fecha de inicio"
+msgstr "Fecha de Inicio"
 
 #. module: omegasoft_hr_estimated_profits
 #: model:ir.model.fields,field_description:omegasoft_hr_estimated_profits.field_hr_contract__estimated_profit_date_end
 msgid "Date end"
-msgstr "fecha de finalización"
+msgstr "Fecha de finalización"
 
 #. module: omegasoft_hr_estimated_profits
 #: model:ir.model.fields,field_description:omegasoft_hr_estimated_profits.field_hr_contract__estimated_profit_date_start
 msgid "Date start"
-msgstr "fecha de inicio"
+msgstr "Fecha de inicio"
 
 #. module: omegasoft_hr_estimated_profits
 #: model:ir.model.fields,field_description:omegasoft_hr_estimated_profits.field_hr_estimated_profit__structure_type_default_schedule_pay
