--- a/omegasoft_hr_hcm/i18n/es_VE.po
+++ b/omegasoft_hr_hcm/i18n/es_VE.po
@@ -4,16 +4,18 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 16.0+e\n"
+"Project-Id-Version: Odoo Server 16.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-07-27 20:45+0000\n"
-"PO-Revision-Date: 2023-07-27 20:45+0000\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2024-10-30 15:36-0400\n"
+"Last-Translator: Leonardo J. Caballero G. <leonardocaballero@gmail.com>\n"
 "Language-Team: \n"
+"Language: es_VE\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: \n"
-"Plural-Forms: \n"
+"Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Poedit 3.5\n"
 
 #. module: omegasoft_hr_hcm
 #: model:ir.model.fields,field_description:omegasoft_hr_hcm.field_hr_hcm_coverage_scale__code
@@ -62,7 +64,7 @@ msgstr "Cuota del aporte Empleado"
 #. module: omegasoft_hr_hcm
 #: model:ir.model.fields,field_description:omegasoft_hr_hcm.field_hr_employee__hcm_end_date
 msgid "End date"
-msgstr "Fecha fin Póliza "
+msgstr "Fecha de fin de Póliza"
 
 #. module: omegasoft_hr_hcm
 #: model:ir.model.fields,field_description:omegasoft_hr_hcm.field_hr_employee__hcm_is_exclusion
@@ -171,10 +173,8 @@ msgstr "Fecha inicio Póliza"
 #. module: omegasoft_hr_hcm
 #: model:ir.model.fields,help:omegasoft_hr_hcm.field_hr_employee__hcm_currency_id
 #: model:ir.model.fields,help:omegasoft_hr_hcm.field_hr_hcm_coverage_scale__currency_id
-msgid ""
-"Tenchincal field used to keep consistency on the amounts used in this record"
-msgstr ""
-"Campo técnico usado para mantener la presición de los montos"
+msgid "Tenchincal field used to keep consistency on the amounts used in this record"
+msgstr "Campo técnico usado para mantener la presición de los montos"
 
 #. module: omegasoft_hr_hcm
 #: model_terms:ir.actions.act_window,help:omegasoft_hr_hcm.hr_hcm_coverage_scale_window_action
