--- a/omegasoft_hr_holidays/i18n/es_VE.po
+++ b/omegasoft_hr_holidays/i18n/es_VE.po
@@ -4,16 +4,18 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 16.0+e\n"
+"Project-Id-Version: Odoo Server 16.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-08-17 14:05+0000\n"
-"PO-Revision-Date: 2023-08-17 14:05+0000\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2024-10-30 15:37-0400\n"
+"Last-Translator: Leonardo J. Caballero G. <leonardocaballero@gmail.com>\n"
 "Language-Team: \n"
+"Language: es_VE\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: \n"
-"Plural-Forms: \n"
+"Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Poedit 3.5\n"
 
 #. module: omegasoft_hr_holidays
 #: model_terms:ir.ui.view,arch_db:omegasoft_hr_holidays.hr_leave_view_form_manager_approval_fix
@@ -23,7 +25,7 @@ msgstr "Confirmar"
 #. module: omegasoft_hr_holidays
 #: model:ir.model.fields,field_description:omegasoft_hr_holidays.field_hr_leave__should_approve_automatically
 msgid "Should Approve Automatically"
-msgstr "Aprobar Automaticamente"
+msgstr "Debería aprobarse automáticamente"
 
 #. module: omegasoft_hr_holidays
 #: model:ir.model.fields,help:omegasoft_hr_holidays.field_hr_leave__should_approve_automatically
