--- a/omegasoft_payroll_salary_rules_report/i18n/es_VE.po
+++ b/omegasoft_payroll_salary_rules_report/i18n/es_VE.po
@@ -4,16 +4,18 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 15.0+e\n"
+"Project-Id-Version: Odoo Server 16.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-11-10 18:16+0000\n"
-"PO-Revision-Date: 2022-11-10 18:16+0000\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2024-10-30 18:13-0400\n"
+"Last-Translator: Leonardo J. Caballero G. <leonardocaballero@gmail.com>\n"
 "Language-Team: \n"
+"Language: es_VE\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: \n"
-"Plural-Forms: \n"
+"Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Poedit 3.5\n"
 
 #. module: omegasoft_payroll_salary_rules_report
 #: model:ir.model.fields,field_description:omegasoft_payroll_salary_rules_report.field_hr_payroll_report__count_assignments
