--- a/omegasoft_provisions_employee_report/i18n/es_VE.po
+++ b/omegasoft_provisions_employee_report/i18n/es_VE.po
@@ -4,16 +4,18 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 15.0+e\n"
+"Project-Id-Version: Odoo Server 16.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-01-13 15:27+0000\n"
-"PO-Revision-Date: 2023-01-13 15:27+0000\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2024-10-30 18:14-0400\n"
+"Last-Translator: Leonardo J. Caballero G. <leonardocaballero@gmail.com>\n"
 "Language-Team: \n"
+"Language: es_VE\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: \n"
-"Plural-Forms: \n"
+"Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Poedit 3.5\n"
 
 #. module: omegasoft_provisions_employee_report
 #: model:ir.model.fields,field_description:omegasoft_provisions_employee_report.field_hr_employee_provisions_report__accrued_social_benefits
@@ -89,12 +91,12 @@ msgstr "Reporte de Provisiones de los empleados"
 #. module: omegasoft_provisions_employee_report
 #: model:ir.model.fields,field_description:omegasoft_provisions_employee_report.field_hr_employee_provisions_report__id
 msgid "ID"
-msgstr ""
+msgstr "ID"
 
 #. module: omegasoft_provisions_employee_report
 #: model:ir.model.fields,field_description:omegasoft_provisions_employee_report.field_hr_employee_provisions_report____last_update
 msgid "Last Modified on"
-msgstr ""
+msgstr "Última modificación el"
 
 #. module: omegasoft_provisions_employee_report
 #: model:ir.ui.menu,name:omegasoft_provisions_employee_report.employee_provisions_report_menu
